<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/transparent80">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/linearlayout_signupfragment_margintop"
        android:layout_marginBottom="@dimen/linearlayout_signupfragment_marginbottom"
        android:layout_marginLeft="@dimen/linearlayout_marginletfandright"
        android:layout_marginRight="@dimen/linearlayout_marginletfandright"
        android:orientation="vertical"
        android:background="@color/white"
        android:weightSum="10">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_background"
            android:orientation="vertical"
            android:layout_weight="1">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/image_signup_margintop"
                android:layout_marginBottom="@dimen/image_marginbottom"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ico_avatar"
                android:id="@+id/imgAvatar" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/textview_text_tap_to_change_profile_image"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"/>
        </LinearLayout>
        <EditText
            android:layout_weight="1"
            android:id="@+id/edtUsername"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/edittext_username_margintop"
            android:layout_marginLeft="@dimen/edittext_marginleftright"
            android:layout_marginRight="@dimen/edittext_marginleftright"
            android:backgroundTint="@color/blue_background"
            android:fontFamily="tamoha"
            android:textSize="@dimen/edittext_username_textsize"
            android:hint="@string/edittext_hint_username_for_signup" />
        <EditText
            android:layout_weight="1"
            android:id="@+id/edtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_marginleftright"
            android:layout_marginRight="@dimen/edittext_marginleftright"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/blue_background"
            android:ems="50"
            android:fontFamily="tamoha"
            android:textSize="@dimen/edittext_username_textsize"
            android:hint="@string/edittext_hint_email_for_signup" />

        <EditText
            android:layout_weight="1"
            android:id="@+id/edtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="20"
            android:layout_marginLeft="@dimen/edittext_marginleftright"
            android:layout_marginRight="@dimen/edittext_marginleftright"
            android:textSize="@dimen/edittext_password_textsize"
            android:fontFamily="tamoha"
            android:hint="@string/edittext_hint_password"
            android:backgroundTint="@color/blue_background"/>
        <EditText
            android:layout_weight="1"
            android:id="@+id/edtConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="20"
            android:layout_marginLeft="@dimen/edittext_marginleftright"
            android:layout_marginRight="@dimen/edittext_marginleftright"
            android:textSize="@dimen/edittext_password_textsize"
            android:fontFamily="tamoha"
            android:hint="@string/edittext_hint_confirmpassword"
            android:backgroundTint="@color/blue_background"/>
        <EditText
            android:layout_weight="1"
            android:id="@+id/edtPromotionCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_marginleftright"
            android:layout_marginRight="@dimen/edittext_marginleftright"
            android:textSize="@dimen/edittext_password_textsize"
            android:fontFamily="tamoha"
            android:hint="@string/edittext_hint_promotioncode"
            android:backgroundTint="@color/blue_background"/>

        <CheckBox
            android:id="@+id/chkSubscribe"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext_marginleftright"
            android:layout_marginRight="@dimen/edittext_marginleftright"
            android:text="@string/checkbox_text_subsrcibe_via_email"
            android:textColor="@color/textcolor"/>

        <Button
            android:layout_weight="1"
            android:id="@+id/bntSignin"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_layoutheight_signIn"
            android:layout_marginTop="@dimen/button_margintop_signUp"
            android:layout_marginLeft="@dimen/button_marginleft_signIn"
            android:layout_marginRight="@dimen/button_marginright_signIn"
            android:background="@color/blue_background"
            android:text="@string/button_text_signup"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/button_textsize_signup" />

    </LinearLayout>
    <Button
        android:id="@+id/bntSignup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_layoutheight_signup"
        android:layout_marginLeft="@dimen/linearlayout_marginletfandright"
        android:layout_marginRight="@dimen/linearlayout_marginletfandright"
        android:gravity="center"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_signin"
        android:textColor="@color/blue_background"
        android:textSize="@dimen/button_textsize_signup"
        android:textAllCaps="false"/>


</RelativeLayout>
