<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent80">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/linearlayout.margintop"
        android:layout_marginBottom="@dimen/linearlayout.marginbottom"
        android:layout_marginLeft="@dimen/linearlayout.marginletfandright"
        android:layout_marginRight="@dimen/linearlayout.marginletfandright"
        android:orientation="vertical"
        android:background="@color/white"
        android:weightSum="5">
        <RelativeLayout
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/blue_background">
            <vn.asiantech.learnenglish.core.CircleImageView
                android:id="@+id/imgAvatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/image.margintop"
                android:layout_centerInParent="true"
                android:src="@drawable/ico_avatar"/>
        </RelativeLayout>
        <EditText
            android:id="@+id/edtUsername"
            android:layout_weight="1.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext.marginleftright"
            android:layout_marginRight="@dimen/edittext.marginleftright"
            android:inputType="textEmailAddress"
            android:backgroundTint="@color/blue_background"
            android:ems="50"
            android:fontFamily="tamoha"
            android:textSize="@dimen/edittext.username.textsize"
            android:hint="@string/edittext_hint_username" />

        <EditText
            android:id="@+id/edtPassword"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="20"
            android:layout_marginLeft="@dimen/edittext.marginleftright"
            android:layout_marginRight="@dimen/edittext.marginleftright"
            android:textSize="@dimen/edittext.password.textsize"
            android:fontFamily="tamoha"
            android:hint="@string/edittext_hint_password"
            android:backgroundTint="@color/blue_background"/>
        <TextView
            android:id="@+id/txtError"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/edittext.marginleftright"
            android:layout_marginRight="@dimen/edittext.marginleftright"
            android:textSize="@dimen/text.error.textsize"
            android:fontFamily="tamoha"
            android:textColor="@color/red"/>

        <Button
            android:id="@+id/btnSignin"
            android:layout_weight="0.5"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button.layoutheight.signIn"
            android:layout_marginLeft="@dimen/button.marginleft.signIn"
            android:layout_marginRight="@dimen/button.marginright.signIn"
            android:background="@color/blue_background"
            android:text="@string/button_text_signin"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:textSize="@dimen/edittext.username.textsize" />

        <TextView
            android:id="@+id/txtForgetpassword"
            android:layout_weight="0.5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/textview.marginbottom.forget.password"
            android:text="@string/textview_text_forget_password"
            android:textColor="@color/blue_background"
            android:textSize="@dimen/text.error.textsize"
            android:gravity="bottom"/>
    </LinearLayout>
    <Button
        android:id="@+id/btnSignup"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button.layoutheight.signup"
        android:layout_marginLeft="@dimen/linearlayout.marginletfandright"
        android:layout_marginRight="@dimen/linearlayout.marginletfandright"
        android:gravity="center"
        android:background="@color/white"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/button_text_signup"
        android:textColor="@color/blue_background"
        android:textSize="@dimen/button.textsize.signup"
        android:textAllCaps="false"/>

</RelativeLayout>
