<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white">
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/image.background.line"
        android:background="@color/blue_background"/>
    <EditText
        android:id="@+id/edtDialogUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/button.marginleft.signIn"
        android:layout_marginLeft="@dimen/edittext.marginleftright"
        android:layout_marginRight="@dimen/edittext.marginleftright"
        android:inputType="textEmailAddress"
        android:backgroundTint="@color/blue_background"
        android:ems="50"
        android:fontFamily="tamoha"
        android:textSize="@dimen/edittext.username.textsize"
        android:hint="" />
    <TextView
        android:id="@+id/txtErorr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/edittext.marginleftright"
        android:layout_marginRight="@dimen/edittext.marginleftright"
        android:textSize="@dimen/text.error.textsize"
        android:fontFamily="tamoha"
        android:hint="@string/textview_status_erorr" />
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/image.background.line"
        android:layout_marginTop="@dimen/button.margintop.signIn"
        android:background="@color/blue_background"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/linerlayout.dialog.button.margintop"
        android:orientation="horizontal"
        android:weightSum="2">
        <Button
            android:id="@+id/bntConfirm"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_confirm"
            android:textSize="@dimen/edittext.username.textsize"
            android:textColor="@color/white"
            android:background="@color/blue_background"/>
        <ImageView
            android:layout_width="@dimen/image.background.line"
            android:layout_height="match_parent"
            android:background="@color/white"/>

        <Button
            android:id="@+id/bntCancel"
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_text_cancel"
            android:textSize="@dimen/edittext.username.textsize"
            android:textColor="@color/white"
            android:background="@color/blue_background"/>
    </LinearLayout>



</LinearLayout>